set01/problem10_compile_errors.txt
Compilation started at 11/2/2023, 4:15:42 PM
Compilation finished at 11/2/2023, 4:15:42 PM
Compilation started at 11/15/2023, 5:06:06 PM
Compilation finished at 11/15/2023, 5:06:06 PM
Compilation started at 11/15/2023, 5:06:40 PM
Compilation finished at 11/15/2023, 5:06:40 PM
Compilation started at 11/15/2023, 5:07:17 PM
Compilation finished at 11/15/2023, 5:07:18 PM
Compilation started at 11/15/2023, 5:08:44 PM
c:\Users\ketan\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Ketan09092\set01\problem10.c: In function 'output':
c:\Users\ketan\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Ketan09092\set01\problem10.c:48:9: error: 'result' redeclared as different kind of symbol
     int result=3;
         ^~~~~~
c:\Users\ketan\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Ketan09092\set01\problem10.c:46:47: note: previous definition of 'result' was here
 void output(char *string1, char *string2, int result)
                                               ^~~~~~
Compilation finished at 11/15/2023, 5:08:44 PM
Compilation started at 11/15/2023, 5:08:51 PM
Compilation finished at 11/15/2023, 5:08:51 PM
Compilation started at 11/15/2023, 5:09:40 PM
Compilation finished at 11/15/2023, 5:09:40 PM
Compilation started at 11/15/2023, 5:10:23 PM
Compilation finished at 11/15/2023, 5:10:23 PM
Compilation started at 11/15/2023, 5:10:42 PM
Compilation finished at 11/15/2023, 5:10:42 PM
Compilation started at 11/15/2023, 5:11:10 PM
Compilation finished at 11/15/2023, 5:11:11 PM
Compilation started at 11/15/2023, 5:11:16 PM
Compilation finished at 11/15/2023, 5:11:17 PM
Compilation started at 11/15/2023, 5:12:11 PM
Compilation finished at 11/15/2023, 5:12:11 PM
Compilation started at 11/15/2023, 5:12:21 PM
Compilation finished at 11/15/2023, 5:12:21 PM
Compilation started at 11/15/2023, 5:33:47 PM
Compilation finished at 11/15/2023, 5:33:48 PM
Compilation started at 11/15/2023, 5:34:27 PM
Compilation finished at 11/15/2023, 5:34:27 PM
Compilation started at 11/15/2023, 5:34:32 PM
Compilation finished at 11/15/2023, 5:34:33 PM
Compilation started at 11/15/2023, 5:34:41 PM
Compilation finished at 11/15/2023, 5:34:41 PM
Compilation started at 11/15/2023, 5:36:15 PM
Compilation finished at 11/15/2023, 5:36:15 PM
Compilation started at 11/15/2023, 5:40:25 PM
Compilation finished at 11/15/2023, 5:40:26 PM
Compilation started at 11/15/2023, 6:19:46 PM
Compilation finished at 11/15/2023, 6:19:46 PM
Compilation started at 11/15/2023, 6:20:49 PM
Compilation finished at 11/15/2023, 6:20:49 PM
Compilation started at 11/15/2023, 6:21:05 PM
Compilation finished at 11/15/2023, 6:21:05 PM
Compilation started at 11/15/2023, 6:21:32 PM
Compilation finished at 11/15/2023, 6:21:32 PM
Compilation started at 11/15/2023, 6:22:08 PM
Compilation finished at 11/15/2023, 6:22:08 PM
Compilation started at 11/15/2023, 6:22:23 PM
Compilation finished at 11/15/2023, 6:22:24 PM
Compilation started at 11/15/2023, 6:23:14 PM
Compilation finished at 11/15/2023, 6:23:14 PM
Compilation started at 11/15/2023, 6:25:59 PM
Compilation finished at 11/15/2023, 6:26:00 PM
Compilation started at 11/15/2023, 6:26:08 PM
Compilation finished at 11/15/2023, 6:26:08 PM
Compilation started at 11/15/2023, 6:26:14 PM
Compilation finished at 11/15/2023, 6:26:14 PM
Compilation started at 11/15/2023, 6:26:27 PM
Compilation finished at 11/15/2023, 6:26:27 PM
Compilation started at 11/15/2023, 6:29:26 PM
Compilation finished at 11/15/2023, 6:29:26 PM
